[package]
name = "rivic"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.28", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.7"
thiserror = "1.0"
hex = "0.4"

# Solana dependencies
solana-sdk = "1.16"
solana-client = "1.16"

# Ethereum and Polygon dependencies
web3 = "0.18"

# Logging
log = "0.4"
env_logger = "0.10"

[dev-dependencies]
anyhow = "1.0"

[[bin]]
name = "rivic"
path = "src/main.rs"

[lib]
name = "rivic"
path = "src/lib.rs"